test/modules/standard/FileSystem/fsouza/chdir/no_such_directory.good
no_such_directory.chpl:3: error: No such file or directory in chdir with path "no-such-dir"
